common-sce creation

--- a/Projects/Graphics Programming/Simple Demo/.vscode/settings.json
+++ b/Projects/Graphics Programming/Simple Demo/.vscode/settings.json
@@ -6,6 +6,12 @@
         "vram.h": "c",
         "graphics.h": "c",
         "pspdisplay.h": "c",
-        "callbacks.h": "c"
+        "callbacks.h": "c",
+        "stb_image.h": "c",
+        "malloc.h": "c",
+        "string.h": "c",
+        "pspgum.h": "c",
+        "pspkernel.h": "c",
+        "common-sce.h": "c"
     }
 }
