Tilemaps, Fonts, and Texture Atlases!

--- a/Projects/Graphics Programming/Simple Demo/.vscode/settings.json
+++ b/Projects/Graphics Programming/Simple Demo/.vscode/settings.json
@@ -12,6 +12,7 @@
         "string.h": "c",
         "pspgum.h": "c",
         "pspkernel.h": "c",
-        "common-sce.h": "c"
+        "common-sce.h": "c",
+        "math.h": "c"
     }
 }
